crates/parser/src/snapshots/parser__tests__parse_inline_err@0155_prefix_let_expr_no_binding.ath.snap
---
source: crates/parser/src/tests.rs
description: "(let (domain Foo) foo)\n"
input_file: crates/parser/test_data/parser/inline/err/expr/0155_prefix_let_expr_no_binding.ath
---
PREFIX_LET_EXPR
  L_PAREN "("
  LET_KW "let"
  WHITESPACE " "
  L_PAREN "("
  ERROR
    DOMAIN_KW "domain"
  WHITESPACE " "
  ERROR
    IDENT "Foo"
  R_PAREN ")"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      IDENTIFIER
        IDENT "foo"
  R_PAREN ")"
  WHITESPACE "\n"
error 6: Expected to find a prefix binding in parens
error 6: expected a binding in the prefix let expression
error 12: Expected to find a prefix binding in parens
error 13: expected a binding in the prefix let expression

