crates/parser/src/snapshots/parser__tests__parse_inline_err@0156_prefix_binding_no_pat.ath.snap
---
source: crates/parser/src/tests.rs
description: "(let ( 1) foo)\n"
input_file: crates/parser/test_data/parser/inline/err/expr/0156_prefix_binding_no_pat.ath
---
PREFIX_LET_EXPR
  L_PAREN "("
  LET_KW "let"
  WHITESPACE " "
  L_PAREN "("
  WHITESPACE " "
  ERROR
    IDENT "1"
  R_PAREN ")"
  WHITESPACE " "
  IDENT_EXPR
    IDENTIFIER
      IDENT "foo"
  R_PAREN ")"
  WHITESPACE "\n"
error 6: Expected to find a prefix binding in parens
error 7: expected a binding in the prefix let expression

