crates/parser/src/snapshots/parser__tests__parse_inline_err@0160_prefix_match_expr_no_scrutinee.ath.snap
---
source: crates/parser/src/tests.rs
description: "(match (A B))\n"
input_file: crates/parser/test_data/parser/inline/err/expr/0160_prefix_match_expr_no_scrutinee.ath
---
APPLICATION_EXPR
  L_PAREN "("
  INFIX_MATCH_EXPR
    MATCH_KW "match"
    WHITESPACE " "
    EXPR_PHRASE
      APPLICATION_EXPR
        L_PAREN "("
        EXPR_PHRASE
          IDENT_EXPR
            NAME_REF
              IDENT "A"
        WHITESPACE " "
        EXPR_PHRASE
          IDENT_EXPR
            NAME_REF
              IDENT "B"
        R_PAREN ")"
  R_PAREN ")"
  WHITESPACE "\n"
error 12: Expected to find clauses for the match

